outputs_20260331-062313-b0be7ec0/codegen/production/build_logs/compiler_stderr.log
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c:31:43: error: 'IfxGtm_TOM1_2_TOUT12_P00_3_OUT' undeclared (first use in this function)
   31 | #define PHASE_U_HS                      (&IfxGtm_TOM1_2_TOUT12_P00_3_OUT)  /* U high-side: P00.3 (TOM1 CH2) */
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c:76:62: note: in expansion of macro 'PHASE_U_HS'
   76 |     output[0].pin                     = (IfxGtm_Pwm_ToutMap*)PHASE_U_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c:31:43: note: each undeclared identifier is reported only once for each function it appears in
   31 | #define PHASE_U_HS                      (&IfxGtm_TOM1_2_TOUT12_P00_3_OUT)  /* U high-side: P00.3 (TOM1 CH2) */
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c:76:62: note: in expansion of macro 'PHASE_U_HS'
   76 |     output[0].pin                     = (IfxGtm_Pwm_ToutMap*)PHASE_U_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c:33:43: error: 'IfxGtm_TOM1_1N_TOUT14_P00_5_OUT' undeclared (first use in this function)
   33 | #define PHASE_V_HS                      (&IfxGtm_TOM1_1N_TOUT14_P00_5_OUT) /* V high-side: P00.5 (mapped option for TOM1) */
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c:84:62: note: in expansion of macro 'PHASE_V_HS'
   84 |     output[1].pin                     = (IfxGtm_Pwm_ToutMap*)PHASE_V_HS;
      |                                                              ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c:35:43: error: 'IfxGtm_TOM1_3N_TOUT16_P00_7_OUT' undeclared (first use in this function)
   35 | #define PHASE_W_HS                      (&IfxGtm_TOM1_3N_TOUT16_P00_7_OUT) /* W high-side: P00.7 (mapped option for TOM1) */
      |                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_cpva7uav\src\gtm_tom_3_phase_inverter_pwm.c:92:62: note: in expansion of macro 'PHASE_W_HS'
   92 |     output[2].pin                     = (IfxGtm_Pwm_ToutMap*)PHASE_W_HS;
      |                                                              ^~~~~~~~~~
